2010-05-04  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Controls/Src/Common/NullableBoolConverter.cs: Handle null values properly.
	Fixes a stack overflow in drt #PPC.NullableBoolConverterTest.

2010-04-21  Alan McGovern  <amcgovern@novell.com>

	* Controls/Src/ToolTip/ToolTip.cs: Add in some missing default
	  values.

2010-03-18  Alan McGovern  <amcgovern@novell.com>

	* Controls/Src/ListBox/ListBoxItem.cs:
	* Controls/Src/ToolTip/ToolTipService.cs:
	* Controls/Src/ToggleButton/ToggleButton.cs:
	* Controls/Src/ScrollViewer/ScrollViewer.cs: 1) Regenerate the
	  default value tests for SL3.
	2) Add in a lot of missing DefaultValue attributes to native
	  DPs and fixed some cases where we were using DefaultValue
	  instead of AutoCreateValue.
	3) Remove a bunch of places where we set local values in ctors
	  instead of just using the DefaultValue.

2010-03-15  Alan McGovern  <amcgovern@novell.com>

	* Controls/Src/ToolTip/ToolTipService.cs: These properties
	  shouldn't be core properties as they don't need to set the
	  parent. Prevents cycles in the tree in MMOD.

2010-03-09  Alan McGovern  <amcgovern@novell.com>

	* RuntimeControls/SilverlightControls/HyperlinkButton.cs: Add
	  support for DeepLinking. It works for my (trivial)
	  testcases. Basically the only change we appear to need is to
	  change HyperlinkButton to look up UIElements implementing
	  INavigator in the visual tree if the 'TargetName' is not one
	  of the known names and then call 'Navigate' on it.

2010-03-05  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Controls/Src/ToolTip/ToolTip.cs:
	* Controls/Src/ListBox/ListBox.cs:
	* Controls/Src/ScrollViewer/ScrollViewer.cs:
	* RuntimeControls/SilverlightControls/Primitives/ButtonBase.cs:
	  Update to SL4 beta API.

2010-03-02  Alan McGovern  <amcgovern@novell.com>

	* Controls/Src/ScrollViewer/ScrollViewer.cs: Remove the
	  horrible hack which stopped the olympics from looping
	  forever.

2010-03-01  Alan McGovern  <amcgovern@novell.com>
